force-app/main/default/objects/Time_Billing__c/Time_Billing__c.object-meta.xml
<CustomObject>
    <label>Time Billing</label>
    <nameField>
        <displayFormat>TB-{0000000000}</displayFormat>
        <label>Time Billing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Billings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>