force-app/main/default/objects/Time_Billing__c/fields/Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Time Billings (Client Contact)</relationshipLabel>
    <relationshipName>Time_Billings1</relationshipName>
    <type>Lookup</type>
</CustomField>