force-app/main/default/objects/Time_Billing__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Time Billings</relationshipLabel>
    <relationshipName>Time_Billings</relationshipName>
    <type>Lookup</type>
</CustomField>