force-app/main/default/objects/Time_Billing__c/fields/Previous_Recalc_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Recalc_Date__c</fullName>
    <label>Previous Recalc Date</label>
    <type>DateTime</type>
</CustomField>