force-app/main/default/objects/Time_Billing__c/fields/Total_Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Billable_Amount__c</fullName>
    <label>Total Billable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>